<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.GameDetailFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_weight="8"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/image"
        />

    <TextView
        android:id="@+id/game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/game_title"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_weight="2"
        />

    <TextView
        android:id="@+id/game_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_description"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_weight="2"
        />



    <TextView
        android:id="@+id/game_platform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_platform"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_weight="2"
        />


    <TextView
        android:id="@+id/game_publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_publisher"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_weight="2"
        />

    <TextView
        android:id="@+id/game_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_developer"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_weight="2"
        />

    <TextView
        android:id="@+id/game_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_release_date"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_weight="2"
        />

    <TextView
        android:id="@+id/game_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_url"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_weight="2"
        />

    <TextView
        android:id="@+id/game_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_genre"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_weight="2"
        />


</LinearLayout>