<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageViewRecyclerRow"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/image"
        />

    <LinearLayout
        android:id="@+id/innerLinearLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >

        <TextView
            android:id="@+id/game_title_recycler_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/game_release_date_recycler_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_release_date"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            />


    </LinearLayout>


</LinearLayout>